<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/_80sdp"
    android:layout_height="@dimen/_120sdp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/container"
    app:cardBackgroundColor="@color/main_blue"
    app:cardElevation="@dimen/_5sdp"
    app:cardCornerRadius="@dimen/_12sdp"
    android:layout_marginStart="@dimen/_5sdp"
    android:layout_marginEnd="@dimen/_5sdp"
    android:layout_marginTop="@dimen/_5sdp"
    android:layout_marginBottom="@dimen/_5sdp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/iv_icon"
            android:layout_width="@dimen/_25sdp"
            android:layout_height="@dimen/_25sdp"
            android:src="@color/white"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/_7sdp"
            android:gravity="center">

            <TextView
                android:id="@+id/forecast_temp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/heat_value"
                android:textSize="@dimen/_18ssp"
                android:fontFamily="@font/poppins_bold"
                android:textColor="@color/white"
                android:layout_marginEnd="@dimen/_3sdp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/degree"
                android:textSize="@dimen/_10ssp"
                android:fontFamily="@font/poppins_bold"
                android:textColor="@color/white"
                android:layout_marginEnd="@dimen/_3sdp"
                android:layout_marginBottom="@dimen/_8sdp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/celcius"
                android:textSize="@dimen/_14ssp"
                android:fontFamily="@font/poppins_bold"
                android:textColor="@color/white"/>

        </LinearLayout>

        <TextView
            android:id="@+id/forecast_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time"
            android:textSize="@dimen/_12ssp"
            android:fontFamily="@font/poppins_medium"
            android:textColor="@color/white"/>

    </LinearLayout>

</androidx.cardview.widget.CardView>