<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_blue"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/city_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_30sdp"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/poppins_bold"
        android:textSize="@dimen/_18ssp"
        android:textColor="@color/white"
        android:text="@string/city_name"
        tools:ignore="RelativeOverlap" />

    <LinearLayout
        android:id="@+id/sublocation_ll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_below="@+id/city_name"
        android:layout_centerHorizontal="true">

        <ImageView
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:src="@drawable/ic_location_white"
            android:elevation="@dimen/_5sdp"
            android:contentDescription="@string/app_name" />

        <TextView
            android:id="@+id/sublocation_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:textSize="@dimen/_13ssp"
            android:textColor="@color/white"
            android:text="@string/weather_status"/>

    </LinearLayout>

    <TextView
        android:id="@+id/weather_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/sublocation_ll"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_5sdp"
        android:fontFamily="@font/poppins_medium"
        android:textSize="@dimen/_13ssp"
        android:textColor="@color/white"
        android:text="@string/weather_status"/>

    <ImageView
        android:id="@+id/current_weather_icon"
        android:layout_width="@dimen/_35sdp"
        android:layout_height="@dimen/_35sdp"
        android:scaleType="centerCrop"
        android:src="@android:mipmap/sym_def_app_icon"
        android:layout_below="@+id/weather_status"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_15sdp"
        android:contentDescription="@string/app_name" />

    <RelativeLayout
        android:id="@+id/search_view_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_30sdp"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="@dimen/_15sdp"
        android:gravity="center">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:src="@drawable/search_main_bg"
            android:contentDescription="@string/app_name" />

        <ImageView
            android:layout_width="@dimen/_21sdp"
            android:layout_height="@dimen/_21sdp"
            android:layout_centerInParent="true"
            android:src="@drawable/ic_search"
            android:contentDescription="@string/app_name" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/location_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_30sdp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="@dimen/_15sdp"
        android:gravity="center">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:src="@drawable/search_main_bg"
            android:contentDescription="@string/app_name" />

        <ImageView
            android:layout_width="@dimen/_21sdp"
            android:layout_height="@dimen/_21sdp"
            android:layout_centerInParent="true"
            android:src="@drawable/ic_location"
            android:elevation="@dimen/_5sdp"
            android:contentDescription="@string/app_name" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/values"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/current_weather_icon"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_10sdp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/current_temp_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/heat_value"
            android:textSize="@dimen/_25ssp"
            android:fontFamily="@font/poppins_bold"
            android:textColor="@color/white"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_5sdp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/degree"
                android:textSize="@dimen/_15ssp"
                android:fontFamily="@font/poppins_bold"
                android:textColor="@color/white"/>

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/celcius"
            android:textSize="@dimen/_20ssp"
            android:fontFamily="@font/poppins_bold"
            android:textColor="@color/white"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/icons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/layout_bg"
        android:layout_below="@+id/values"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/_25sdp"
        android:paddingStart="@dimen/_8sdp"
        android:paddingEnd="@dimen/_8sdp"
        android:paddingTop="@dimen/_10sdp"
        android:paddingBottom="@dimen/_10sdp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_marginStart="@dimen/_10sdp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center_vertical"
                android:layout_marginBottom="@dimen/_10sdp">

                <ImageView
                    android:layout_width="@dimen/_22sdp"
                    android:layout_height="@dimen/_22sdp"
                    android:src="@drawable/ic_wind"
                    android:contentDescription="@string/app_name" />

                <TextView
                    android:id="@+id/wind_value"
                    android:text="@string/wind_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:fontFamily="@font/poppins_medium"
                    android:textSize="@dimen/_13ssp"
                    android:layout_marginStart="@dimen/_10sdp"/>

                <TextView
                    android:text="@string/wind_unit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:fontFamily="@font/poppins_medium"
                    android:textSize="@dimen/_13ssp"
                    android:layout_marginStart="@dimen/_4sdp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="@dimen/_22sdp"
                    android:layout_height="@dimen/_22sdp"
                    android:src="@drawable/ic_barometer"
                    android:contentDescription="@string/app_name" />

                <TextView
                    android:id="@+id/pressure_value"
                    android:text="@string/pressu_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:fontFamily="@font/poppins_medium"
                    android:textSize="@dimen/_13ssp"
                    android:layout_marginStart="@dimen/_10sdp"/>

                <TextView
                    android:text="@string/presuue_unit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:fontFamily="@font/poppins_medium"
                    android:textSize="@dimen/_13ssp"
                    android:layout_marginStart="@dimen/_4sdp"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="@dimen/_10sdp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center_vertical"
                android:layout_marginBottom="@dimen/_10sdp">

                <ImageView
                    android:layout_width="@dimen/_22sdp"
                    android:layout_height="@dimen/_22sdp"
                    android:src="@drawable/ic_drop"
                    android:contentDescription="@string/app_name" />

                <TextView
                    android:id="@+id/humidity_value"
                    android:text="@string/humidity_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:fontFamily="@font/poppins_medium"
                    android:textSize="@dimen/_13ssp"
                    android:layout_marginStart="@dimen/_10sdp"/>

                <TextView
                    android:text="@string/humidity_unit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:fontFamily="@font/poppins_medium"
                    android:textSize="@dimen/_13ssp"
                    android:layout_marginStart="@dimen/_4sdp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginEnd="@dimen/_10sdp"
                android:gravity="center_vertical">

                <ImageView
                    android:layout_width="@dimen/_22sdp"
                    android:layout_height="@dimen/_22sdp"
                    android:src="@drawable/ic_air_pollution"
                    android:layout_marginStart="@dimen/_6sdp"
                    android:contentDescription="@string/app_name" />

                <ViewFlipper
                    android:id="@+id/view_flipper"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:autoStart="true"
                    android:layout_gravity="center"
                    android:layout_marginStart="@dimen/_4sdp"
                    android:inAnimation="@android:anim/slide_in_left"
                    android:outAnimation="@android:anim/slide_out_right">

                    <TextView
                        android:id="@+id/pollution_value"
                        android:text="@string/pollution_level"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:fontFamily="@font/poppins_medium"
                        android:textSize="@dimen/_12ssp" />

                    <TextView
                        android:id="@+id/no2_value"
                        android:text="@string/pollution_good"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:fontFamily="@font/poppins_medium"
                        android:textSize="@dimen/_12ssp" />

                    <TextView
                        android:id="@+id/so2_value"
                        android:text="@string/pollution_level"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:fontFamily="@font/poppins_medium"
                        android:textSize="@dimen/_12ssp" />

                </ViewFlipper>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/today_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="@dimen/_1sdp"
        android:text="@string/todays_weather"
        android:textSize="@dimen/_13ssp"
        android:layout_below="@+id/icons"
        android:fontFamily="@font/poppins_bold"
        android:layout_marginTop="@dimen/_45sdp"
        android:layout_marginStart="@dimen/_20sdp"
        android:textColor="@color/main_blue"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rcv_today_weather_list"
        android:text="@string/forecast_info"
        android:textColor="@color/secondary_blue"
        android:elevation="@dimen/_5sdp"
        android:fontFamily="@font/poppins_medium"
        android:layout_marginTop="@dimen/_4sdp"
        android:layout_marginStart="@dimen/_8sdp"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rcv_today_weather_list"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_135sdp"
        android:layout_below="@+id/today_txt"
        android:layout_marginTop="@dimen/_10sdp"
        android:overScrollMode="never"
        android:elevation="@dimen/_8sdp"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_waves"
        android:layout_marginTop="@dimen/_330sdp"
        android:scaleType="fitXY"
        android:contentDescription="@string/app_name" />

</RelativeLayout>